hydroflow/tests/compile-fail/surface_lattice_fold_wronggeneric.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/surface_lattice_fold_wronggeneric.rs:6:16
  |
4 |       let mut df = hydroflow_syntax! {
  |  __________________-
5 | |         source_iter([1,2,3,4,5])
6 | |             -> lattice_fold::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `SetUnion<_>`, found integer
7 | |             -> for_each(|x| println!("Least upper bound: {:?}", x));
8 | |     };
  | |_____- arguments to this function are incorrect
  |
  = note: expected struct `SetUnion<_>`
               found type `{integer}`
note: method defined here
 --> $WORKSPACE/lattices/src/lib.rs
  |
  |     fn merge(&mut self, other: Other) -> bool;
  |        ^^^^^
help: try wrapping the expression in `hydroflow::lattices::set_union::SetUnion`
   |
6  |             -> hydroflow::lattices::set_union::SetUnion(lattice_fold::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>())
   |                +++++++++++++++++++++++++++++++++++++++++                                                                               +
